2010-05-04  Robby Stephenson  <robby@periapsis.org>

	* Updated BoardGameGeek fetcher for new API.

2010-05-02  Robby Stephenson  <robby@periapsis.org>

	* Added data source for Freebase.

2010-04-29  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for loading images whose size exceeded the cache size.

2010-04-28  Robby Stephenson  <robby@periapsis.org>

	* Changed Amazon Japan video search to include DVDs.
	* Added new fetcher for combining results from multiple sources.

2010-04-27  Robby Stephenson  <robby@periapsis.org>

	* Updated allocine.fr script to version 0.7.1, patch from Romain Henriet.

2010-03-29  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with cursor position in date field entry.

2010-03-27  Robby Stephenson  <robby@periapsis.org>

	* Added fetcher for openlibrary.org (requires QJSON lib).

2010-03-24  Robby Stephenson  <robby@periapsis.org>

	* Added clear button for rating widget (BUG: 227982).
	* Control characters are now stripped from all text files on import (BUG: 231302).
	* Removed local FindKcddb cmake module in favor of system FindKdeMultimedia.

2010-03-23  Robby Stephenson  <robby@periapsis.org>

	* Fixed selection bug when duplicating an entry (BUG: 231125).

2010-03-22  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash in exporting HTML for collections with no grouping field (BUG: 231302).
	* Fixed bug that showed info dialog multiple times when changing image location.

2010-02-24  Robby Stephenson  <robby@periapsis.org>

	* Fixed crash in CSV importer.

2010-02-21  Robby Stephenson  <robby@periapsis.org>

	* Tweaked entry ID values to start at 1 instead of 0.

2010-02-13  Robby Stephenson  <robby@periapsis.org>

	* Released Tellico 2.2.

2010-02-06  Robby Stephenson  <robby@periapsis.org>

	* Enabled Korganizer integration for tracking loans.

2010-01-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed some hyphenation problems when typing 978 ISBN values.